Add Calendar search

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,7 +46,11 @@
       "eslint:recommended"
     ],
     "rules": {
-      "no-console": "off"
+      "no-console": "off",
+      "vue/no-use-v-if-with-v-for": ["error", {
+        "allowUsingIterationVar": true
+      }]
+    
     },
     "parserOptions": {
       "parser": "babel-eslint"
