--- a/backend/AUTH_SERVER/project/src/main/resources/application.properties
+++ b/backend/AUTH_SERVER/project/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8000
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/hghssdb?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=yun
