--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
+    "axios": "^0.19.1",
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
     "vue-js-modal": "^1.3.31",
@@ -47,10 +48,12 @@
     ],
     "rules": {
       "no-console": "off",
-      "vue/no-use-v-if-with-v-for": ["error", {
-        "allowUsingIterationVar": true
-      }]
-    
+      "vue/no-use-v-if-with-v-for": [
+        "error",
+        {
+          "allowUsingIterationVar": true
+        }
+      ]
     },
     "parserOptions": {
       "parser": "babel-eslint"
