--- a/backend/RECRUIT_SERVER/project/pom.xml
+++ b/backend/RECRUIT_SERVER/project/pom.xml
@@ -134,6 +134,13 @@
         </dependency>
 
 
+        <!--jwt-->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
+        </dependency>
+
 
     </dependencies>
     <build>
