Modify ranking api - apply, favorite

--- a/backend/RECRUIT_SERVER/project/.gitignore
+++ b/backend/RECRUIT_SERVER/project/.gitignore
@@ -32,3 +32,5 @@ build/
 
 ### db configuration
 src/main/java/com/rest/recruit/config/AppConfig.java
+/src/main/java/com/rest/recruit/config/
+src/main/java/com/rest/recruit/config/
