--- a/backend/RESUME_SERVER/project/src/main/resources/application.properties
+++ b/backend/RESUME_SERVER/project/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/hghssdb?serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.data-username=yun
-spring.datasource.data-password=yun
+spring.datasource.username=yun
+spring.datasource.password=yun
+
+server.port=7000
