--- a/backend/RECRUIT_SERVER/project/src/main/resources/application.properties
+++ b/backend/RECRUIT_SERVER/project/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.redis.lettuce.pool.max-idle=10
 spring.redis.lettuce.pool.min-idle=2
 spring.redis.port=6379
 spring.redis.host=127.0.0.1
+server.port = 7000
 
