--- a/backend/RECRUIT_SERVER/project/src/main/resources/application.properties
+++ b/backend/RECRUIT_SERVER/project/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.redis.lettuce.pool.min-idle=2
 spring.redis.port=6379
 spring.redis.host=127.0.0.1
 server.port = 7000
-
+spring.cache.ehcache.config=classpath:ehcache.xml
