--- a/backend/AUTH_SERVER/project/src/main/resources/application.properties
+++ b/backend/AUTH_SERVER/project/src/main/resources/application.properties
@@ -1,13 +1,9 @@
-server.port=8000
-#server.port=7000
+server.port=7000
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/hghssdb?serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.username=yun
-spring.datasource.password=yun
-#spring.datasource.url=jdbc:mysql://hghssdb.cxzs7p8tyazt.ap-northeast-2.rds.amazonaws.com:3306/hghssdb?serverTimezone=UTC&characterEncoding=UTF-8
-#spring.datasource.username=hghss
-#spring.datasource.password=smilegate123!
+spring.datasource.url=jdbc:mysql://hghssdb.cxzs7p8tyazt.ap-northeast-2.rds.amazonaws.com:3306/hghssdb?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=hghss
+spring.datasource.password=smilegate123!
 
 spring.redis.host=localhost
 spring.redis.port=6379
@@ -16,3 +12,4 @@ spring.mail.username=auth.HGHSS@gmail.com
 spring.mail.password=smilegate123!
 
 jwt.secret=12345678901234567890123456789012
+
