--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -35,3 +35,5 @@ out/
 
 ### settings ###
 application.properties
+/AUTH_SERVER/project/src/main/resources/application.properties
+/RESUME_SERVER/project/src/main/resources/application.properties
