--- a/backend/RECRUIT_SERVER/project/haproxy.cfg
+++ b/backend/RECRUIT_SERVER/project/haproxy.cfg
@@ -9,25 +9,50 @@ defaults
     timeout client 50000ms
     timeout server 50000ms
 
+    errorfile 400 /etc/haproxy/errors/400.http
+    errorfile 403 /etc/haproxy/errors/403.http
+    errorfile 408 /etc/haproxy/errors/408.http
+    errorfile 500 /etc/haproxy/errors/500.http
+    errorfile 502 /etc/haproxy/errors/502.http
+    errorfile 503 /etc/haproxy/errors/503.http
+    errorfile 504 /etc/haproxy/errors/504.http
+
 frontend http-in
     mode http
     bind *:8888    #들어오는 포트 정보
-    default_backend servers
+    acl is_recruit path_sub recruits
+    acl is_user path_sub users
+    acl is_resume path_sub resumes
+    acl is_chats path_sub chats
+    acl is_ranking path_sub ranking
 
-backend servers      #이 블록에 로드밸런싱해서 연결할 포트 정보 나열
+    use_backend backend_recruit if is_recruit
+    use_backend backend_recruit if is_chats
+    use_backend backend_recruit if is_ranking
+    use_backend backend_user if is_user
+    use_backend backend_resume if is_resume
+
+backend backend_recruit     #이 블록에 로드밸런싱해서 연결할 포트 정보 나열
     mode http
     balance roundrobin
     option forwardfor
     http-request set-header X-Forwarded-Port %[dst_port]
-    server server1 15.165.119.239:7000 check#연결될 포트정보
-    server server2 13.125.32.90:7000 check
+    server recruitServer 13.125.32.90:7000 check
 
+backend backend_user      #이 블록에 로드밸런싱해서 연결할 포트 정보 나열
+    mode http
+    balance roundrobin
+    option forwardfor
+    http-request set-header X-Forwarded-Port %[dst_port]
+    server authServer 15.165.146.7:7000 check
 
+backend backend_resume      #이 블록에 로드밸런싱해서 연결할 포트 정보 나열
+    mode http
+    balance roundrobin
+    option forwardfor
+    http-request set-header X-Forwarded-Port %[dst_port]
+    server resumeServer 3.136.207.97:7000 check
 
-listen stats #"stat"라는 이름으로 listen 지정
-  bind *:9000 # 접속포트 지정
-  stats enable
-  stats uri /haproxy_stats # stat을 제공할 URI
-
-# http://haproxy_host:9000 or http://haproxy_host:9000/haproxy_stats 으로
-# 접속하면 haproxy가 기본적으로 제공하는 화면을 확인할 수 있다.
+listen tcp-in
+        bind *:9090
+        mode http
