--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "vue-js-modal": "^1.3.31",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vuex-shared-mutations": "^1.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
